# HFDPwithCPP

./: .gitignore  BuildNRunSample.sh  CMakeLists.txt  README.md
CH1_Ducks/: CMakeLists.txt  Duck.h
CH1_Ducks/include/: Duck.h
CH1_Ducks/src/: Duck.cpp  main.cpp
CH2_WetherStation/: CMakeLists.txt
CH2_WetherStation/include/: DataCollector.h  Display.h
CH2_WetherStation/src/: DataCollector.cpp  Display.cpp  main.cpp
